salesforce-main/src/main/default/objects/Faculty__c/Faculty__c.object-meta.xml
<CustomObject>
    <label>Faculty</label>
    <nameField>
        <displayFormat>F-{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Faculties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>