salesforce-main/src/main/default/objects/Faculty__c/fields/Banner_ID__c.field-meta.xml
<CustomField>
    <fullName>Banner_ID__c</fullName>
    <label>Banner ID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>