salesforce-main/src/main/default/objects/Faculty__c/fields/Create_Banner_Record__c.field-meta.xml
<CustomField>
    <fullName>Create_Banner_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used only for the &apos;Staff Provisioning&apos; service.</description>
    <label>Create Banner Record</label>
    <type>Checkbox</type>
</CustomField>