salesforce-main/src/main/default/objects/Faculty__c/fields/Last_Error__c.field-meta.xml
<CustomField>
    <fullName>Last_Error__c</fullName>
    <label>Last Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>