salesforce-main/src/main/default/objects/Faculty__c/fields/Locality__c.field-meta.xml
<CustomField>
    <fullName>Locality__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Locality</label>
    <referenceTo>Locality__c</referenceTo>
    <relationshipLabel>Faculties</relationshipLabel>
    <relationshipName>Faculties</relationshipName>
    <type>Lookup</type>
</CustomField>