salesforce-main/src/main/default/objects/Faculty__c/fields/Profile_Services_ID__c.field-meta.xml
<CustomField>
    <fullName>Profile_Services_ID__c</fullName>
    <label>Profile Services ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>