salesforce-main/src/main/default/objects/Faculty__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FACULTY</fullName>
                <default>true</default>
                <label>FACULTY</label>
            </value>
            <value>
                <fullName>COACH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>