salesforce-main/src/main/default/objects/Faculty__c/fields/Staff_Email_Add__c.field-meta.xml
<CustomField>
    <fullName>Staff_Email_Add__c</fullName>
    <label>Staff Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>