salesforce-main/src/main/default/objects/Faculty__c/fields/State_Province__c.field-meta.xml
<CustomField>
    <fullName>State_Province__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>State/Province</label>
    <referenceTo>State_Province__c</referenceTo>
    <relationshipLabel>Faculties</relationshipLabel>
    <relationshipName>Faculties</relationshipName>
    <type>Lookup</type>
</CustomField>