salesforce-main/src/main/default/objects/Faculty__c/fields/Text_Locality__c.field-meta.xml
<CustomField>
    <fullName>Text_Locality__c</fullName>
    <label>Text Locality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>