salesforce-main/src/main/default/objects/Faculty__c/fields/Text_State__c.field-meta.xml
<CustomField>
    <fullName>Text_State__c</fullName>
    <label>Text State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>