salesforce-main/src/main/default/objects/Faculty__c/recordTypes/Faculty.recordType-meta.xml
<RecordType>
    <fullName>Faculty</fullName>
    <active>true</active>
    <label>Faculty</label>
</RecordType>