salesforce-main/src/main/default/objects/Faculty__c/recordTypes/Locked_Faculty.recordType-meta.xml
<RecordType>
    <fullName>Locked_Faculty</fullName>
    <active>true</active>
    <label>Locked Faculty</label>
</RecordType>