salesforce-main/src/main/default/objects/Faculty__c/validationRules/Minimum_13_years_of_Age.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_13_years_of_Age</fullName>
    <active>true</active>
    <description>The individual&apos;s age must be greater then 13 years old.</description>
    <errorConditionFormula>FLOOR((TODAY() - Date_of_Birth__c )/365) &lt; 13</errorConditionFormula>
    <errorMessage>The individual&apos;s age must be greater then 13 years old.</errorMessage>
</ValidationRule>