salesforce-main/src/main/default/objects/Faculty__c/validationRules/Minimum_18_years_of_Age.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_18_years_of_Age</fullName>
    <active>true</active>
    <description>The individual&apos;s age must be greater then 18 years old.</description>
    <errorConditionFormula>FLOOR((TODAY() - Date_of_Birth__c )/365.2425) &lt; 18</errorConditionFormula>
    <errorDisplayField>Date_of_Birth__c</errorDisplayField>
    <errorMessage>The individual&apos;s age must be greater then 18 years old.</errorMessage>
</ValidationRule>