salesforce-main/src/main/default/objects/Faculty__c/validationRules/Validate_Phone_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Phone_Number</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISBLANK(Phone__c),false,Not( IF(ISNUMBER(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(
SUBSTITUTE(SUBSTITUTE( Phone__c , &quot;-&quot; , &quot;&quot;),&quot;+&quot;,&quot;&quot; )
,&quot;(&quot;,&quot;&quot; )
,&quot;)&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;)),
LEN(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(
SUBSTITUTE(SUBSTITUTE( Phone__c , &quot;-&quot; , &quot;&quot;),&quot;+&quot;,&quot;&quot; )
,&quot;(&quot;,&quot;&quot; )
,&quot;)&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;))&lt;=20,false)
))</errorConditionFormula>
    <errorMessage>Enter a valid Phone number</errorMessage>
</ValidationRule>